kubectl/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: cratt  # id kubernetes, pour repérer, mise à jour etc.., unique pour chaque namespacexressource
  #1 trio d'unicité : namespace/name/kind
spec:
  replicas: 1
  selector: # système labels selector, marqueurs etc.. pour repérer par la suite et sélectionner
    matchLabels:
      app: cratt # comment retrouver mes pods ? (avec quel label ?)
  template: # je mets des labels sur les pods-> le déploiement donenra naissance à des pods auxquels le label nginxlabel1 sera donné
    metadata:
      labels:
        app: cratt
    spec:
      containers:
        - name: cratt
          image: cguillo/cratt:latest # dorowu/ubuntu-desktop-lxde-vnc
          imagePullPolicy: Always
          resources:
            requests:  # Minimum resources required
              cpu: "3"
              memory: "10Gi"
            limits:  # Maximum resources used
              cpu: "4"
              memory: "20Gi"
